# GUI-Germini

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
DIAGRAMAS/: diagrama de flujo gui.md  diagrama-actualizacion-grafico.puml  diagrama-conexion-serial.puml  diagrama-control-motores.puml  diagrama-control-pid.puml  diagrama-envio-comandos.puml  diagrama-estados.puml  diagrama-exportacion-csv.puml  diagrama-flujo-comandos.puml  diagrama-flujo-datos.puml  diagrama-flujo-gui.puml  diagrama-inicializacion.puml  diagrama-recepcion-datos.puml
INSTRUCCIONES/: Instructivo.md
